welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: not enough arguments for method retour: (T: Array[java.awt.Color])Unit.
Unspecified value parameter T.
    retour()
          ^